src/pages/messaging/agent-chat-api/v3.1/rtm-pushes/index.mdx
---
weight: 23
category: "messaging"
subcategory: "agent-chat-api"
title: "RTM pushes"
tagline: "The reference of LiveChat RTM API pushes."
desc: "This document contains a reference of LiveChat RTM API pushes."
apiVersion: "3.1"
---

This document contains a reference of **pushes** available in the **LiveChat Agent Chat API**. Similarly to [webhooks](/management/webhooks), pushes notify you when specific events occur. They're usually generated as result of RTM API actions, but it's also possible to receive them in result of Web API actions.

<Section>
<Text>

## Introduction

Here's what you need to know about **pushes**:

- They are generated primarily by RTM API actions, but also by Web API actions.
- They notify you when specific events occur.
- Can be **delivered** only in the websocket transport.
- You don't need to register pushes to receive them.
- Their equivalents in Web API are [webhooks](/management/configuration-api/v3.1/#webhooks). Pushes and webhooks have similar payloads.
- There are no retries for pushes. To determine if a user has seen an event, compare the [event's](/messaging/agent-chat-api/v3.1/data-structures/#response) `created_at` parameter with the [user's](/messaging/agent-chat-api/v3.1/data-structures/#users) `events_seen_up_to` field.

## Available pushes

|                 |                                                                                                                                                                                                                                                                                                                                                                     |
| --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**       | [`incoming_chat_thread`](#incoming_chat_thread) [`thread_closed`](#thread_closed)                                                                                                                                                                                                                                                                                   |
| **Chat access** | [`access_granted`](#access_granted) [`access_revoked`](#access_revoked) [`access_set`](#access_set) [`chat_transferred`](#chat_transferred-1)                                                                                                                                                                                                                       |
| **Chat users**  | [`chat_user_added`](#chat_user_added) [`chat_user_removed`](#chat_user_removed)                                                                                                                                                                                                                                                                                     |
| **Events**      | [`incoming_event`](#incoming_event) [`event_updated`](#event_updated)[`incoming_rich_message_postback`](#incoming_rich_message_postback)                                                                                                                                                                                                                            |
| **Properties**  | [`chat_properties_updated`](#chat_properties_updated) [`chat_properties_deleted`](#chat_properties_deleted) [`chat_thread_properties_updated`](#chat_thread_properties_updated) [`chat_thread_properties_deleted`](#chat_thread_properties_deleted) [`event_properties_updated`](#event_properties_updated) [`event_properties_deleted`](#event_properties_deleted) |
| **Thread tags** | [`chat_thread_tagged`](#chat_thread_tagged) [`chat_thread_untagged`](#chat_thread_untagged)                                                                                                                                                                                                                                                                         |
| **Customers**   | [`customer_visit_started`](#customer_visit_started) [`customer_created`](#customer_created) [`customer_updated`](#customer_updated) [`customer_page_updated`](#customer_page_updated) [`customer_banned`](#customer_banned) [`customer_visit_ended`](#customer_visit_ended)                                                                                         |
| **Status**      | [`agent_updated`](#agent_updated) [`agent_disconnected`](#agent_disconnected)                                                                                                                                                                                                                                                                                       |
| **Other**       | [`events_marked_as_seen`](#events_marked_as_seen) [`incoming_sneak_peek`](#incoming_sneak_peek) [`incoming_typing_indicator`](#incoming_typing_indicator) [`incoming_multicast`](#incoming_multicast)                                                                                                                                                               |

</Text>

<Code>

<CodeResponse title={'general push format'}>

```json
{
  "request_id": "<request_id>", // optional, applies only to the requester
  "action": "<action>",
  "type": "push",
  "payload": {
    // optional payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chats

### `incoming_chat_thread`
Informs about a new thread coming in the chat. The push payload contains not only the new thread, but the whole chat data structure. If the chat was started with some initial events, the thread object contains them.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat": {
    "id": "PJ0MRSHTDG",
    "users": [
      // array of "User" objects
    ],
    "properties": {
      "source": {
        "type": "facebook"
      }
      // ...
    },
    "thread": {
      // "Thread" object
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                           |
| ---------------------- | ------------------------------------------------------------------------- |
| **Action**             | `incoming_chat_thread`                                                    |
| **Webhook equivalent** | [`incoming_chat_thread`](/management/webhooks/v3.1/#incoming_chat_thread) |

### `thread_closed`
Informs that a thread was closed.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c" // optional
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `thread_closed`                                             |
| **Webhook equivalent** | [`thread_closed`](/management/webhooks/v3.1/#thread_closed) |

#### Push payload

| Field     | Notes                                         |
| --------- | --------------------------------------------- |
| `user_id` | Missing if a thread was closed by the router. |

## Chat access

### `access_granted`
Informs that new, single access to a resource was granted. The existing access isn't overwritten.

<CodeResponse title={'Sample push payload'}>

```json
{
  "resource": "chat",
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [1]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `access_granted`                                              |
| **Webhook equivalent** | [`access_granted`](/management/webhooks/v3.1/#access_granted) |

#### Push payload

| Field      | Notes         |
| ---------- | ------------- |
| `resource` | Resource type |
| `id`       | Resource id   |

### `access_revoked`
Informs that access to a certain resource was revoked.

<CodeResponse title={'Sample push payload'}>

```json
{
  "resource": "chat",
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [1]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `access_revoked`                                              |
| **Webhook equivalent** | [`access_revoked`](/management/webhooks/v3.1/#access_revoked) |

#### Push payload

| Field      | Notes         |
| ---------- | ------------- |
| `resource` | Resource type |
| `id`       | Resource Id   |

### `access_set`
Informs that new, single access to a resource was set. The existing access is overwritten.

<CodeResponse title={'Sample push payload'}>

```json
{
  "resource": "chat",
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [1]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                       |
| ---------------------- | ----------------------------------------------------- |
| **Action**             | `access_set`                                          |
| **Webhook equivalent** | [`access_set`](/management/webhooks/v3.1/#access_set) |

#### Push payload

| Field      | Notes         |
| ---------- | ------------- |
| `resource` | Resource type |
| `id`       | Resource Id   |

### `chat_transferred`
Informs that a chat was transferred to a different group or to an Agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "requester_id": "cb531744-e6a4-4ded-b3eb-b3eb4ded4ded",
  "type": "agent",
  "ids": ["agent1@example.com"]
}
```

</CodeResponse>

#### Specifics

|                        |                    |
| ---------------------- | ------------------ |
| **Action**             | `chat_transferred` |
| **Webhook equivalent** | -                  |

#### Push payload

| Field  | Notes                        |
| ------ | ---------------------------- |
| `type` | `agent` or `group`           |
| `ids`  | `group` or `agent` IDs array |

## Chat users

### `chat_user_added`
Informs that a user (Customer or Agent) was added to a chat.

This push can be emitted with `user.present` set to `false` when a user writes to a chat without joining it. You can achieve that via the [Send Event](#send-event) method.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user": {
    // "User > Customer" or "User > Agent" object
  },
  "user_type": "agent"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                 |
| ---------------------- | --------------------------------------------------------------- |
| **Action**             | `chat_user_added`                                               |
| **Webhook equivalent** | [`chat_user_added`](/management/webhooks/v3.1/#chat_user_added) |

#### Push payload

| Field       | Notes                                          |
| ----------- | ---------------------------------------------- |
| `user_type` | Possible values: `agent`, `customer`           |
| `thread_id` | Empty if a user was added to an inactive chat. |

### `chat_user_removed`
Informs that a user (Customer or Agent) was removed from a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "agent1@example.com",
  "user_type": "agent"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `chat_user_removed`                                                 |
| **Webhook equivalent** | [`chat_user_removed`](/management/webhooks/v3.1/#chat_user_removed) |

#### Push payload

| Field       | Notes                                              |
| ----------- | -------------------------------------------------- |
| `user_type` | Possible values: `agent`, `customer`               |
| `thread_id` | Empty if a user was removed from an inactive chat. |

## Events

### `incoming_event`
Informs about an incoming [event](/messaging/agent-chat-api/v3.1/data-structures/#events) sent to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event": {
      "id": "Q20163UAHO_2",
      "created_at": "2019-12-05T07:27:08.820000Z",
      "recipients": "all",
      "type": "message",
      "properties": {
          "0805e283233042b37f460ed8fbf22160": {
              "string_property": {
                "value": "string value"
              }
          }
      },
      "text": "Hello",
      "author_id": "author@example.com"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `incoming_event`                                              |
| **Webhook equivalent** | [`incoming_event`](/management/webhooks/v3.1/#incoming_event) |

### `event_updated`
Informs that an [event](/messaging/agent-chat-api/v3.1/data-structures/#events) was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "123-123-123-123",
  "thread_id": "E2WDHA8A",
  "event": {
    // "Event" object
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `event_updated`                                             |
| **Webhook equivalent** | [`event_updated`](/management/webhooks/v3.1/#event_updated) |

### `incoming_rich_message_postback`
Informs about an incoming [rich message](/messaging/agent-chat-api/v3.1/data-structures/#rich-message) postback. The push payload contains the info on the postback itself, as well as the chat it was sent in.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
  "postback": {
    "id": "action_yes",
    "toggled": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_rich_message_postback`                                                              |
| **Webhook equivalent** | [`incoming_rich_message_postback`](/management/webhooks/v3.1/#incoming_rich_message_postback) |

## Properties

### `chat_properties_updated`
Informs about those chat properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
    "rating": {
      "score": {
        "value": 1
      },
      "comment": {
        "value": "Very good, veeeery good"
      }
    }
    // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_updated`                                                       |
| **Webhook equivalent** | [`chat_properties_updated`](/management/webhooks/v3.1/#chat_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_properties_deleted`
Informs about those chat properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_deleted`                                                       |
| **Webhook equivalent** | [`chat_properties_deleted`](/management/webhooks/v3.1/#chat_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_thread_properties_updated`
Informs about those chat thread properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
    "rating": {
      "value": {
        "value": 1
      },
      "comment": {
        "value": "Very good, veeeery good"
      }
    }
    // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `chat_thread_properties_updated`                                                              |
| **Webhook equivalent** | [`chat_thread_properties_updated`](/management/webhooks/v3.1/#chat_thread_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_thread_properties_deleted`
Informs about those chat thread properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"thread_id": "K600PKZON8",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `chat_thread_properties_deleted`                                                              |
| **Webhook equivalent** | [`chat_thread_properties_deleted`](/management/webhooks/v3.1/#chat_thread_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_updated`
Informs about those event properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
    "rating": {
      "comment": {
        "value": "goooood"
      }
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_updated`                                                        |
| **Webhook equivalent** | [`event_properties_updated`](/management/webhooks/v3.1/#event_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_deleted`
Informs about those event properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"thread_id": "K600PKZON8",
	"event_id": "2_E2WDHA8A",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_deleted`                                                        |
| **Webhook equivalent** | [`event_properties_deleted`](/management/webhooks/v3.1/#event_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

## Thread tags

### `chat_thread_tagged`
Informs that a chat thread was tagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                       |
| ---------------------- | --------------------------------------------------------------------- |
| **Action**             | `chat_thread_tagged`                                                  |
| **Webhook equivalent** | [`chat_thread_tagged`](/management/webhooks/v3.1/#chat_thread_tagged) |

### `chat_thread_untagged`
Informs that a chat thread was untagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                           |
| ---------------------- | ------------------------------------------------------------------------- |
| **Action**             | `chat_thread_untagged`                                                    |
| **Webhook equivalent** | [`chat_thread_untagged`](/management/webhooks/v3.1/#chat_thread_untagged) |

## Customers

### `customer_visit_started`
Informs that a Customer entered the tracked website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "visit_id": 42,
  "started_at": "2017-10-12T15:19:21.010200Z",
  "ip": "<ip>",
  "user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.116 Safari/537.36",
  "geolocation": {
    "latitude": "55.0805",
    "longitude": "16.0211",
    "country": "Poland",
    "country_code": "PL",
    "region": "Dolnoslaskie",
    "city": "Wroclaw",
    "timezone": "Europe/Warsaw"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                          |
| ---------------------- | ------------------------ |
| **Action**             | `customer_visit_started` |
| **Webhook equivalent** | -                        |

### `customer_created`
Informs that a new Customer registered.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer": {
    // "User > Customer" object
    "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "created_at": "2019-11-14T14:27:24.410018Z",
    "email": "customer1@example.com",
    "avatar": "https://example.com/avatars/1.jpg",
    "fields": {
        "some_key": "some_value"
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `customer_created`                                                |
| **Webhook equivalent** | [`customer_created`](/management/webhooks/v3.1/#customer_created) |

### `customer_updated`
Informs that Customer's data was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer": {
    "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "name": "John Doe",
    "email": "john@doe.me",
    "avatar": "https://example.com/avatars/1.jpg",
    "type": "customer",
    "present": false,
    "banned": false,
    "fields": {
      "custom field name": "custom field value"
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                    |
| ---------------------- | ------------------ |
| **Action**             | `customer_updated` |
| **Webhook equivalent** | -                  |

### `customer_page_updated`
Informs that a Customer moved to another page of the website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "visit_id": 42,
  "opened_at": "2017-10-12T15:19:21.010200Z",
  "url": "https://www.livechat.com/",
  "title": "LiveChat - Homepage"
}
```

</CodeResponse>

#### Specifics

|                        |                         |
| ---------------------- | ----------------------- |
| **Action**             | `customer_page_updated` |
| **Webhook equivalent** | -                       |

### `customer_banned`
Informs that a Customer was banned for a specified number of days.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "ban": {
    "days": 5
  }
}
```

</CodeResponse>

#### Specifics

|                        |                   |
| ---------------------- | ----------------- |
| **Action**             | `customer_banned` |
| **Webhook equivalent** | -                 |

### `customer_visit_ended`
Informs that a Customer left the tracked website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "visit_id": 42,
  "ended_at": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

#### Specifics

|                        |                        |
| ---------------------- | ---------------------- |
| **Action**             | `customer_visit_ended` |
| **Webhook equivalent** | -                      |

## Status

### `agent_updated`
Informs that an Agent's status was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "agent_id": "agent1@example.com",
  "routing_status": "accepting_chats"
}
```

</CodeResponse>

#### Specifics

|                        |                 |
| ---------------------- | --------------- |
| **Action**             | `agent_updated` |
| **Webhook equivalent** | -               |

### `agent_disconnected`
Informs that an Agent was disconnected. The payload contains the reason of Customer's disconnection.

<CodeResponse title={'Sample push payload'}>

```json
{
  "reason": "misdirected_request",
  "data": {
    // optional
    "region": "fra"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                      |
| ---------------------- | -------------------- |
| **Action**             | `agent_disconnected` |
| **Webhook equivalent** | -                    |

#### Possible reasons

| Type                           | Notes                                                  |
| ------------------------------ | ------------------------------------------------------ |
| `access_token_revoked`         | Agent access token has been revoked.                   |
| `access_token_expired`         | Access token life time has elapsed.                    |
| `license_expired`              | License has expired.                                   |
| `agent_deleted`                | Agent account has been deleted.                        |
| `agent_logged_out_remotely`    | Agent has been logged out remotely.                    |
| `agent_disconnected_by_server` | Agent has been disconnected by the server.             |
| `unsupported_version`          | Connecting to an unsupported version of the Agent API. |
| `ping_timeout`                 | Not receiving ping for some time from the Customer.    |
| `internal_error`               | Internal error                                         |
| `too_many_connections`         | Agent reached the max. number of connections.          |
| `misdirected_request` **\***   | Agent connected to the server in the wrong region.     |
| `product_version_changed`      | Product version has been changed.                      |
| `license_not_found`            | License with the specified ID doesn't exist.           |

**\*)**
Also, `misdirected_request` returns the correct `region` value in the optional `data` object.
With this piece of information, the client is able to figure out where it should be connected.

## Other

### `incoming_typing_indicator`
Informs that one of the chat users is currently typing a message. The message hasn't been sent yet. The push payload contains the typing indicator object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "typing_indicator": {
    "author_id": "d17cd570-11a9-45c0-45c0-1b020b7586dc",
    "recipients": "all",
    "timestamp": 1574245378,
    "is_typing": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                             |
| ---------------------- | --------------------------- |
| **Action**             | `incoming_typing_indicator` |
| **Webhook equivalent** | -                           |

### `incoming_sneak_peek`
Informs about the message a Customer is currently typing. The push payload contains the sneak peek object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "sneak_peek": {
    "author_id": "d17cd570-11a9-45c0-45c0-1b020b7586dc",
    "recipients": "all",
    "text": "Hello",
    "timestamp": 1574245378
  }
}
```

</CodeResponse>

#### Specifics

|                        |                       |
| ---------------------- | --------------------- |
| **Action**             | `incoming_sneak_peek` |
| **Webhook equivalent** | -                     |

### `events_marked_as_seen`
Informs that a user has seen events up to a specific time.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "seen_up_to": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                             |
| ---------------------- | --------------------------------------------------------------------------- |
| **Action**             | `events_marked_as_seen`                                                     |
| **Webhook equivalent** | [`events_marked_as_seen`](/management/webhooks/v3.1/#events_marked_as_seen) |

### `incoming_multicast`
Informs about messages sent via the `multicast` method or by the system.

<CodeResponse title={'Sample push payload'}>

```json
{
  "author_id": "agent1@example.com",
  "content": {
    "example": {
      "nested": "json"
    }
  },
  "type": "type1"
}
```

</CodeResponse>

#### Specifics

|                        |                      |
| ---------------------- | -------------------- |
| **Action**             | `incoming_multicast` |
| **Webhook equivalent** | -                    |

#### Push payload

| Field       | Required | Notes                                                                                            |
| ----------- | -------- | ------------------------------------------------------------------------------------------------ |
| `author_id` | No       | Present only if the push was generated by the **Multicast** method and not sent from the server. |
| `content`   | Yes      |                                                                                                  |
| `type`      | No       |                                                                                                  |
